<resources>
    <string name="app_name">CatchIt_Beta</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_notifikasi">Notifikasi</string>
    <string name="title_favorit">Favorit</string>
    <string name="title_jadwal">Jadwal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search_elements">Cari kriteria, produk, tempat…</string>
    <string name="search_filter">Filter</string>
    <string name="location">Cimahi, Indonesia</string>
    <string name="riwayat">Riwayat</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="favorit">Favorit</string>
    <string name="pilihan_untuk_anda">Pilihan untuk Anda</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="sambutan">Selamat datang di</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="keranjang">Keranjang</string>
</resources>