<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.diazp.catchit.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorit"
        android:name="com.diazp.catchit.fragment.FavoritFragment"
        android:label="@string/title_favorit"
        tools:layout="@layout/fragment_favorit" />

    <fragment
        android:id="@+id/navigation_notifikasi"
        android:name="com.diazp.catchit.fragment.NotifikasiFragment"
        android:label="@string/title_notifikasi"
        tools:layout="@layout/fragment_notifikasi" />

    <fragment
        android:id="@+id/navigation_keranjang"
        android:name="com.diazp.catchit.fragment.KeranjangFragment"
        android:label="@string/keranjang"
        tools:layout="@layout/fragment_keranjang" />
</navigation>