<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/header_background"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/ic_banner_catchit"
                android:contentDescription="login background" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:src="@drawable/ic_logo_catchit_text"
            app:tint="@color/white" />

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_login"
            style="@style/loginCard"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:layout_marginBottom="@dimen/loginViewsMargin"
            android:background="@color/white"
            android:elevation="5dp"
            app:cardCornerRadius="@dimen/loginCardRadius">

            <LinearLayout
                style="@style/linearParent"
                android:layout_gravity="center"
                android:padding="@dimen/loginViewsMargin">

                <TextView
                    style="@style/headerTextPrimary"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:text="@string/login" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/et_email"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_email_hint"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/et_password"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_password_hint"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_fpassword"
                    style="@style/viewParent"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:onClick="viewForgotPassword"
                    android:text="Forgot Password?"
                    android:textColor="@color/l_blue_1"
                    android:textSize="@dimen/newsMoreTextSize" />

                <Button
                    android:id="@+id/btn_login"
                    style="@style/Button1"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:text="Login" />

                <TextView
                    android:id="@+id/tv_signUp"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:onClick="viewRegisterClicked"
                    android:text="@string/login_signup_hint"
                    android:textAlignment="center"
                    android:textColor="@color/l_blue_1"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>