<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header_background"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:alpha="0.4"
                        android:background="@null"
                        android:drawableStart="@drawable/ic_search_catchit"
                        android:drawableEnd="@drawable/ic_verticalline_catchit"
                        android:drawablePadding="10dp"
                        android:hint="@string/search_elements"
                        android:imeOptions="actionSearch"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp"
                        android:textColor="@color/gray_2"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:alpha="0.4"
                        android:background="@null"
                        android:drawablePadding="7dp"
                        android:gravity="center"
                        android:paddingStart="6dp"
                        android:paddingEnd="15dp"
                        android:text="@string/search_filter"
                        android:textColor="@color/gray_2"
                        android:textSize="14sp"
                        app:drawableStartCompat="@drawable/ic_filter_catchit" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="@string/location"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:drawableStartCompat="@drawable/ic_location_catchit"
                    app:drawableTint="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_userProfile"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/user_catchit"
                    app:layout_constraintBottom_toBottomOf="@+id/location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/location" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/vp_carousel"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="20dp"
                    android:paddingHorizontal="10dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/tv_riwayat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:text="@string/riwayat"
                        android:textColor="@color/gray_1"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selengkapnya"
                        android:textColor="@color/l_blue_1"
                        android:paddingEnd="20dp"
                        android:textSize="13sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_riwayat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_below="@+id/tv_riwayat"
                        android:layout_marginTop="5dp"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/tv_favorit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/favorit"
                        android:textColor="@color/gray_1"
                        android:paddingStart="20dp"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selengkapnya"
                        android:textColor="@color/l_blue_1"
                        android:paddingEnd="20dp"
                        android:textSize="13sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_favorit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_below="@+id/tv_favorit"
                        android:layout_marginTop="5dp"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/tv_pilihan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pilihan_untuk_anda"
                        android:textColor="@color/gray_1"
                        android:paddingStart="20dp"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selengkapnya"
                        android:textColor="@color/l_blue_1"
                        android:paddingEnd="20dp"
                        android:textSize="13sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_pilihan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_below="@+id/tv_pilihan"
                        android:layout_marginTop="5dp"/>

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>