<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/header_background"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="70dp"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@drawable/ic_banner_catchit"
                android:contentDescription="login background" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:src="@drawable/ic_logo_catchit_text"
            app:tint="@color/white" />

        <androidx.cardview.widget.CardView
            style="@style/loginCard"
            app:cardCornerRadius="@dimen/loginCardRadius"
            android:elevation="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:layout_marginBottom="@dimen/loginViewsMargin"
            android:background="@color/white"
            android:id="@+id/layout_register">

            <LinearLayout
                style="@style/linearParent"
                android:layout_gravity="center"
                android:padding="@dimen/loginViewsMargin">

                <TextView
                    style="@style/headerTextPrimary"
                    android:text="@string/register"
                    android:layout_marginTop="@dimen/loginViewsMargin"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/parent"
                    android:layout_marginTop="@dimen/signup_text_margin_top">
                    <EditText
                        android:id="@+id/et_nama"
                        style="@style/modifiedEditText"
                        android:inputType="text"
                        android:maxLines="1"
                        android:hint="Name"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/parent"
                    android:layout_marginTop="@dimen/signup_text_margin_top">
                    <EditText
                        android:id="@+id/et_email"
                        style="@style/modifiedEditText"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:hint="@string/login_email_hint"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/parent"
                    android:layout_marginTop="@dimen/signup_text_margin_top"
                    app:passwordToggleEnabled="true">
                    <EditText
                        android:id="@+id/et_password"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_password_hint"
                        android:maxLines="1"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_register"
                    style="@style/Button1"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="Register" />

                <LinearLayout
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <View
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="1dp"
                        android:background="#CACACA" />

                    <TextView
                        android:layout_marginHorizontal="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="atau masuk dengan"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="1dp"
                        android:background="#CACACA" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/btn_google"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/bg_google_btn"
                    android:padding="13dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        app:srcCompat="@drawable/ic_google"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="Google"
                        android:textColor="@color/black" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_signIn"
                    style="@style/parent"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/l_blue_1"
                    android:text="@string/signup_login_hint"
                    android:layout_marginTop="@dimen/loginViewsMargin"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:id="@+id/pb"
        android:layout_width="40dp"
        android:layout_height="40dp"/>

</RelativeLayout>